--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -59,8 +62,7 @@
     <string name="X_lbl_image">Imagen</string>
     <string name="X_lbl_thumbnails">Miniaturas</string>
     <string name="X_neither">Ninguno de los dos</string>
-    <string name="X_option_bob_filter_anthology_no">Todos menos antologías</string>
-    <string name="X_option_bob_filter_anthology_yes">Antologías</string>
+    <string name="X_lbl_anthologies">Antologías</string>
     <string name="X_lbl_general">General</string>
     <string name="tip_booklist_style_defaults">Utilice esta pantalla para establecer las características por defecto de todos los estilos. Éstas son utilizadas por todos los estilos incorporados y como punto de partida para cualquier estilo que defina usted mismo.</string>
     <string name="X_action_use_default_setting">Usar configuración predeterminada</string>
@@ -572,12 +574,10 @@
     <string name="pt_search_reformat_color">Estandarizar nombres de «color de libro»</string>
     <string name="pt_search_reformat_format">Estandarizar nombres de «formato de libro»</string>
     <string name="pt_search_uses_publisher">Búsqueda utiliza editor</string>
-    <string name="X_pt_author_name_formatting">Formato de nombre de autor</string>
     <string name="pt_show_title_reordered">Mostrar títulos como…</string>
     <string name="ps_show_titles_reordered_off">Mostrar como se indica,\npor ejemplo «El Señor de los Anillos»</string>
     <string name="error_type_not_supported">Tipo no soportado: %1$s …</string>
     <string name="ps_show_titles_reordered_on">Mover un artículo inicial al final,\npor ejemplo, «Señor de los Anillos, El»</string>
-    <string name="X_pt_sort_author_name_given_first">Clasificación del nombre del autor</string>
     <string name="pt_sort_title_reordered">Ordenar títulos por</string>
     <string name="pt_cover_undo_enabled">Deshacer operaciones en portadas de libros</string>
     <string name="ps_cover_undo_disabled">Una edición/reemplazo de portada no se puede deshacer (utiliza menos espacio de almacenamiento)</string>
@@ -717,7 +717,6 @@
     <string name="error_updates_aborted">Actualizaciones canceladas</string>
     <string name="lbl_country">País</string>
     <string name="pt_search_show_shopping_options">Mostrar menús de compras</string>
-    <string name="lbl_standardize">Estandarizar</string>
     <string name="lbl_author_pseudonym_of_X">se. %1$s</string>
     <string name="lbl_titles">Títulos</string>
     <string name="lbl_original_title">Título original</string>
