--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’)
@@ -60,8 +63,7 @@
     <string name="X_lbl_image">Image</string>
     <string name="X_lbl_thumbnails">Miniatures</string>
     <string name="X_neither">Non plus</string>
-    <string name="X_option_bob_filter_anthology_no">Tous sauf des anthologies</string>
-    <string name="X_option_bob_filter_anthology_yes">Des anthologies</string>
+    <string name="X_lbl_anthologies">Des anthologies</string>
     <string name="X_lbl_general">Général</string>
     <string name="tip_booklist_style_defaults">Cet écran permet de définir les caractéristiques par défaut de tous les styles. Celles-ci sont utilisées par tous les styles intégrés et comme point de départ pour tout style que vous définissez vous-même.</string>
     <string name="X_action_use_default_setting">Utiliser les paramètres par défaut</string>
@@ -562,12 +564,10 @@
     <string name="pt_search_reformat_color">Normaliser les noms de « couleur de livre »</string>
     <string name="pt_search_reformat_format">Normaliser les noms de « format livre »</string>
     <string name="pt_search_uses_publisher">La recherche utilise l’éditeur</string>
-    <string name="X_pt_author_name_formatting">Formatage du nom de l’auteur</string>
     <string name="pt_show_title_reordered">Afficher les titres en tant que…</string>
     <string name="ps_show_titles_reordered_off">Afficher comme indiqué,\npar exemple « Le Seigneur des anneaux »</string>
     <string name="error_type_not_supported">Type non pris en charge : %1$s …</string>
     <string name="ps_show_titles_reordered_on">Déplacer un article de tête à la fin,\npar exemple « Seigneur des anneaux, Le »</string>
-    <string name="X_pt_sort_author_name_given_first">Tri par nom d’auteur</string>
     <string name="pt_sort_title_reordered">Trier les titres par</string>
     <string name="pt_cover_undo_enabled">Annulation des opérations sur les couvertures de livres</string>
     <string name="ps_cover_undo_disabled">L’édition/le remplacement d’une couverture ne peut pas être annulé(e) (moins d’espace de stockage)</string>
@@ -708,7 +708,6 @@
     <string name="error_updates_aborted">Mises à jour annulées</string>
     <string name="lbl_country">Pays</string>
     <string name="pt_search_show_shopping_options">Afficher les menus d’achat</string>
-    <string name="lbl_standardize">Standardiser</string>
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
     <string name="lbl_titles">Titres</string>
     <string name="lbl_original_title">Titre original</string>
