--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -57,8 +60,7 @@
     <string name="X_lbl_system">(Systeem)</string>
     <string name="X_lbl_thumbnails">Miniaturen</string>
     <string name="X_neither">Geen van beide</string>
-    <string name="X_option_bob_filter_anthology_no">Geen Bloemlezingen</string>
-    <string name="X_option_bob_filter_anthology_yes">Bloemlezingen</string>
+    <string name="X_lbl_anthologies">Bloemlezingen</string>
     <string name="X_lbl_general">Algemeen</string>
     <string name="tip_booklist_style_defaults">Gebruik dit scherm om de standaard kenmerken van alle stijlen in te stellen. Deze worden gebruikt door alle ingebouwde stijlen en als uitgangspunt voor elke stijl die je zelf definieert.</string>
     <string name="X_action_use_default_setting">Standaardinstellingen gebruiken</string>
@@ -601,9 +603,7 @@
     <string name="pt_search_reformat_format">Standaardiseer namen van „boekformaten”</string>
     <string name="pt_search_resolve_authors_bedetheque">Los auteursnamen op met behulp van de Bedetheque-website</string>
     <string name="pt_search_uses_publisher">Zoeken maakt gebruik van de uitgever</string>
-    <string name="X_pt_author_name_formatting">Opmaak van auteursnamen</string>
     <string name="pt_show_title_reordered">Toon titels als…</string>
-    <string name="X_pt_sort_author_name_given_first">Sorteren op auteursnaam</string>
     <string name="pt_sort_title_reordered">Sorteer titels op</string>
     <string name="pt_storage_volume">Opslagvolume</string>
     <string name="pt_cover_undo_enabled">Bewerkingen op boekomslagen ongedaan maken</string>
@@ -704,7 +704,6 @@
     <string name="yes">Ja</string>
     <string name="lbl_country">Land</string>
     <string name="pt_search_show_shopping_options">Toon shopping menu’s</string>
-    <string name="lbl_standardize">Standaardiseren</string>
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
     <string name="lbl_titles">Titels</string>
     <string name="lbl_original_title">Oorspronkelijke titel</string>
