--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -19,37 +19,12 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<!--
-    Reference sites:
-    https://www.abbreviations.com/
-
-     Some linguists, especially in British English, believe that "loan" should only
-     be used as a noun, while the correct verb is only "lend."
-
-
-    ENTITY:
-    Define entities that can be used inside of other string (not possible with standard Android
-    resources e.g. the entities file define APP_NAME; use it in another string with: &APP_NAME;
-    cannot put these into an external file: https://issuetracker.google.com/issues/68434088
-
-    Each language string.xml file uses localized quotes as per
-    https://en.wikipedia.org/wiki/Quotation_mark#Summary_table
-    See top of each language resource file for the "quotes" comment.
-
-    Plurals:
-    http://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html
-        cardinal
-
-    en-rGB: https://issuetracker.google.com/issues/142590628
-    fixed in Studio 4.1
--->
 <!DOCTYPE resources [
     <!ENTITY APP_NAME "NeverTooManyBooks">
     ]>
 <!-- Quotes “…” - Regex to find wrong ones: ('|„|‘|’|«|») -->
 <!--suppress LongLine -->
-<resources xmlns:tools="http://schemas.android.com/tools"
-           tools:locale="en">
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- region ========== Plurals. -->
     <!-- displayed in the header of booklist -->
     <plurals name="displaying_n_books">
